BeamableServices/services/StepH-GameEventScript/GameEventScript.bnf
GameEventScript ::= Separators [ ModuleDeclaration Separators ] { TopLevelDeclaration Separators } EndOfFile

(* Lexical convention: spaces, tabs, and line comments are skipped before tokens.
   Line breaks are preserved as NewLine tokens because they may separate statements. *)
Separators ::= { StatementSeparator }
StatementSeparator ::= NewLine | ";"
NewLine ::= "\n" | "\r\n"
EndOfFile ::= "<end-of-file>"

ModuleDeclaration ::= "module" ModuleName
TopLevelDeclaration ::= RecordDefinition | PredicateDefinition | FunctionDefinition | EventHandler

RecordDefinition ::= "record" TypeTag "as" "{" Separators [ RecordField { RecordFieldSeparator RecordField } ] Separators "}"
RecordFieldSeparator ::= "," Separators | Separators
RecordField ::= Identifier ":" TypeTag [ "clamped" "between" Expression "and" Expression ] [ "computed" "by" Expression ]

PredicateDefinition ::= "predicate" Identifier "(" [ ParameterList ] ")" "means" Expression
FunctionDefinition ::= "function" Identifier "(" [ ParameterList ] ")" "means" Expression

EventHandler ::= "on" HandlerEndpoint [ HandlerBinding ] { HandlerTagFilter } "{" Separators [ Statement { StatementSeparator Statement } ] Separators "}"
HandlerEndpoint ::= Message | "initialization" | "undeliverable"
HandlerBinding ::= "(" [ ParameterList ] ")"
                 | "as" Identifier
HandlerTagFilter ::= ( "matching" | "without" ) TagLiteral { "," TagLiteral }

ParameterList ::= Parameter { "," Parameter }
Parameter ::= Identifier [ "as" TypeReference ]
            | "_" Identifier [ "as" TypeReference ]
HandlerLiteralParameterList ::= HandlerLiteralParameter { "," HandlerLiteralParameter }
HandlerLiteralParameter ::= Identifier | "_" Identifier

Statement ::= EmitStatement
            | PublishStatement
            | LetStatement
            | IfStatement
            | ForStatement
            | SeededRandomStatement
            | ExpressionStatement

EmitStatement ::= "emit" MessageExpression [ TagPublishClause ]
PublishStatement ::= "publish" MessageExpression [ TagPublishClause ]
MessageExpression ::= Message [ ParenthesizedArgumentList ] | Expression
TagPublishClause ::= "with" Expression { "," Expression }

LetStatement ::= "let" Identifier [ "as" TypeReference ] "be" Expression
IfStatement ::= "if" Expression StatementBody [ "else" StatementBody ]
ForStatement ::= "for" Identifier ( "in" Expression | RangeIterationSource ) StatementBody
SeededRandomStatement ::= ":random" "with" Expression StatementBody
ExpressionStatement ::= Expression

StatementBody ::= Statement | "{" Separators [ Statement { StatementSeparator Statement } ] Separators "}"

Expression ::= GuardedChoiceExpression
GuardedChoiceExpression ::= ImplicationExpression [ "when" ImplicationExpression { "," [ "or" ] ImplicationExpression "when" ImplicationExpression } "otherwise" ImplicationExpression ]
ImplicationExpression ::= DefaultExpression [ ImplicationArrow ImplicationExpression ]
ImplicationArrow ::= "->" | "→" | "⇒"

DefaultExpression ::= CollectionCombineExpression { ":default" CollectionCombineExpression }
CollectionCombineExpression ::= OrExpression { CollectionCombineOperator OrExpression }
CollectionCombineOperator ::= ":intersect" | ":combine" | ":merge" | ":except" | ":zip"

OrExpression ::= XorExpression { ( "|" | "∨" | "or" ) XorExpression }
XorExpression ::= AndExpression { ( "xor" | "⊕" ) AndExpression }
AndExpression ::= EqualityExpression { ( "&" | "∧" | "and" ) EqualityExpression }
EqualityExpression ::= MembershipExpression { ( "=" | "<>" | "≠" | "=~" | "≈" | "≅" ) MembershipExpression }

MembershipExpression ::= TypeOperationExpression { MembershipOperator TypeOperationExpression }
MembershipOperator ::= "in"
                     | "∈"
                     | "∉"
                     | "has" "value"
                     | "value" "in"
                     | "starts" "with"
                     | "ends" "with"

TypeOperationExpression ::= RelationalExpression { TypeOperation }
TypeOperation ::= "is" [ NotOperator ] ( TypeReference | NumericCheck )
                | "is" [ NotOperator ] "empty"
                | "is" [ NotOperator ] "at" "least" AdditiveExpression
                | "is" [ NotOperator ] "at" "most" AdditiveExpression
                | "is" [ NotOperator ] AdditiveExpression "or" ( "less" | "more" | "greater" )
                | "is" [ NotOperator ] ExtensionReference
                | "is" [ NotOperator ] Identifier
                | "is" [ NotOperator ] AdditiveExpression
                | "as" TypeReference

RelationalExpression ::= AdditiveExpression { ( "<" | ">" | "<=" | ">=" | "≤" | "≥" ) AdditiveExpression }
AdditiveExpression ::= MultiplicativeExpression { ( "+" | "-" | "−" ) MultiplicativeExpression }
MultiplicativeExpression ::= UnaryExpression { ( MultiplicativeOperator UnaryExpression ) | ImplicitNumberIdentifierMultiply }
MultiplicativeOperator ::= "*" | "×" | "·" | "⋅" | "/" | "÷" | "div" | "mod" | "rem"
ImplicitNumberIdentifierMultiply ::= Number IdentifierWithoutWhitespace

UnaryExpression ::= ( "-" | "−" ) UnaryExpression
                  | NotOperator UnaryExpression
                  | "has" "value" UnaryExpression
                  | "empty" UnaryExpression
                  | UnaryTag UnaryExpression
                  | PowerExpression
NotOperator ::= "!" | "~" | "¬" | "not"

PowerExpression ::= PowerBaseExpression [ ( "^" UnaryExpression ) | SuperscriptPower ]
PowerBaseExpression ::= ExtensionCallExpression
                      | ClampExpression
                      | VariadicTaggedExpression
                      | PostfixExpression

UnaryTag ::= ":len" | ":chance" | ":keys" | ":values" | ":entries" | ":abs" | ":ln" | ":sqrt" | "√" | ":cbrt" | "∛"
VariadicTaggedExpression ::= ( ":min" | ":max" ) "of" Expression { "and" Expression }
ClampExpression ::= ":clamp" UnaryExpression "between" Expression "and" Expression

PostfixExpression ::= PrimaryExpression { PostfixSuffix }
PostfixSuffix ::= "." Identifier | "[" CollectionSelector "]"

PrimaryExpression ::= Literal
                    | CallExpression
                    | MessageLiteralExpression
                    | HandlerLiteralExpression
                    | TypeConstructorExpression
                    | Identifier
                    | TagLiteral
                    | OfListLiteral
                    | "(" Expression ")"
                    | BracketLiteral
                    | GeneratedListExpression
                    | RangeExpression
                    | RandomExpression
                    | SeededRandomExpression
                    | DiceExpression

CallExpression ::= Identifier ParenthesizedArgumentList
MessageLiteralExpression ::= Message ParenthesizedArgumentList
HandlerLiteralExpression ::= Message "(" [ HandlerLiteralParameterList ] ")"
ExtensionCallExpression ::= ExtensionReference [ ParenthesizedArgumentList | OfArgumentList | UngroupedLabeledArgumentList | UnaryExpression ]
ExtensionReference ::= ":" Identifier "." Identifier
TypeConstructorExpression ::= TypeTag ParenthesizedArgumentList

ParenthesizedArgumentList ::= "(" [ ArgumentList ] ")"
ArgumentList ::= Argument { "," Argument | LabeledArgument }
Argument ::= LabeledArgument | Expression
LabeledArgument ::= ArgumentLabel ":" Expression
UngroupedLabeledArgumentList ::= LabeledArgument { LabeledArgument }
OfArgumentList ::= "of" Expression { "and" Expression }
ArgumentLabel ::= Identifier | "to"

Literal ::= Number | Percentage | UnitNumber | TextLiteral | "true" | "false"
TagLiteral ::= ":" TagName | ":infinity" | ":negativeinfinity" | ":nan" | ":pi" | ":e" | ":euler" | ":tau" | ":phi" | "∞" | "∏" | "ℇ" | "τ" | "φ"

BracketLiteral ::= ListLiteral | MapLiteral
ListLiteral ::= "[" [ ExpressionList ] "]"
MapLiteral ::= "[" ":" "]"
             | "[" MapEntry { "," MapEntry } "]"
MapEntry ::= Identifier ":" [ Expression ]
ExpressionList ::= Expression { "," Expression }
OfListLiteral ::= "of" Expression { "and" Expression }

GeneratedListExpression ::= ":list" "[" GeneratedCollectionSelector "]"
GeneratedCollectionSelector ::= ":select" Identifier ( RangeIterationSource | "in" Expression ) [ "where" Expression ] ProjectionArrow Expression

RandomExpression ::= ":random" [ "from" ] AdditiveExpression "to" AdditiveExpression
SeededRandomExpression ::= ":random" "with" Expression Expression
RangeExpression ::= RangeIterationSource
RangeIterationSource ::= "from" Expression "to" Expression [ "step" Expression ]
DiceExpression ::= ":dice" Number DiceSeparator Number
DiceSeparator ::= "d"

CollectionSelector ::= StructuredCollectionSelector | Expression
StructuredCollectionSelector ::= QuantifiedCollectionSelector
                               | PatternCollectionSelector
                               | TakeCollectionSelector
                               | DropCollectionSelector
                               | SeriesTermSelector
                               | CountCollectionSelector
                               | ChooseCollectionSelector
                               | DrawCollectionSelector
                               | ShuffleCollectionSelector
                               | ReverseCollectionSelector
                               | EdgeCollectionSelector
                               | FilterCollectionSelector
                               | SumCollectionSelector
                               | AverageCollectionSelector
                               | ExtremaCollectionSelector
                               | ProjectionCollectionSelector
                               | MapCollectionSelector
                               | ContainsCollectionSelector
                               | DistinctCollectionSelector
                               | GroupByCollectionSelector
                               | SortCollectionSelector
                               | OrderByCollectionSelector

QuantifiedCollectionSelector ::= ( ":any" | ":all" ) Identifier "where" Expression
PatternCollectionSelector ::= ":has" ( ObjectMatchPattern | DicePattern )
TakeCollectionSelector ::= ":take" ( SliceSelector | DicePattern )
DropCollectionSelector ::= ":drop" SliceSelector
SeriesTermSelector ::= ":term" Expression
CountCollectionSelector ::= ":count" Identifier "where" Expression
ChooseCollectionSelector ::= ":choose" Number [ "at" "random" ] [ Identifier "where" Expression ] [ "weighted" "by" Identifier ProjectionArrow Expression ]
DrawCollectionSelector ::= ":draw" Number
ShuffleCollectionSelector ::= ":shuffle"
ReverseCollectionSelector ::= ":reverse"
EdgeCollectionSelector ::= ( ":first" | ":last" | ":single" ) [ Identifier "where" Expression ]
FilterCollectionSelector ::= ":filter" Identifier "where" Expression
SumCollectionSelector ::= ":sum" Identifier ProjectionArrow Expression
AverageCollectionSelector ::= ":average" Identifier ProjectionArrow Expression
ExtremaCollectionSelector ::= ( ":min" | ":max" | ":highest" | ":lowest" ) Identifier ProjectionArrow Expression
ProjectionCollectionSelector ::= ":select" Identifier ProjectionArrow Expression
MapCollectionSelector ::= ":map" Identifier "by" Expression [ ProjectionArrow Expression ]
ContainsCollectionSelector ::= ":contains" [ "all" | "any" ] Expression
DistinctCollectionSelector ::= ":distinct" [ "by" Identifier ProjectionArrow Expression ]
GroupByCollectionSelector ::= ":group" "by" Identifier ProjectionArrow Expression
SortCollectionSelector ::= ":sort" SortDirection
OrderByCollectionSelector ::= ":order" "by" Identifier ProjectionArrow Expression SortDirection

ProjectionArrow ::= "=>" | "↦"
SortDirection ::= "ascending" | "descending"
SliceSelector ::= SliceScope Number
SliceScope ::= "first" | "last" | "highest" | "lowest"

DicePattern ::= "pair" [ "of" UnaryExpression ]
              | DiceCountWord "of" ( "a" "kind" | UnaryExpression )
              | "full" "house"
              | "straight"
DiceCountWord ::= "three" | "four" | "five" | "six" | "seven"

ObjectMatchPattern ::= "[" [ ObjectMatchEntry { "," ObjectMatchEntry } ] "]"
ObjectMatchEntry ::= Identifier ":" ( Expression | ObjectMatchPattern )

TypeReference ::= TypeTag
TypeTag ::= BuiltinTypeTag | CustomTypeTag
BuiltinTypeTag ::= ":nothing"
                 | ":boolean"
                 | ":number"
                 | ":percentage"
                 | ":quantity" "(" UnitName ")"
                 | ":vector"
                 | ":point"
                 | ":series"
                 | ":range"
                 | ":message"
                 | ":handler"
                 | ":envelope"
                 | ":tag"
                 | ":text"
                 | ":list"
                 | ":map"
                 | ":dice"
CustomTypeTag ::= ":" TagName
UnitName ::= "m" | "meter" | "s" | "second" | "degree" | "°"
NumericCheck ::= "numeric" | "integer" | "fractional"

ModuleName ::= Identifier | Message
Message ::= UpperLetter { NameLetter }
Identifier ::= LowerLetter { NameLetter } [ "_" NumericSuffix ]
IdentifierWithoutWhitespace ::= Identifier
TagName ::= LowerLetter { NameLetter }

Number ::= DigitGroup [ "." DigitGroup ]
DigitGroup ::= Digit { [ "_" ] Digit }
NumericSuffix ::= "0" | NonZeroDigit { Digit }
Percentage ::= Number "%"
UnitNumber ::= Number ( "°" | "m" | "s" )

TextLiteral ::= SingleQuotedTextLiteral | DoubleQuotedTextLiteral
SingleQuotedTextLiteral ::= "'" { SingleQuotedTextChar } "'"
DoubleQuotedTextLiteral ::= "\"" { DoubleQuotedTextChar } "\""
SingleQuotedTextChar ::= EscapedSingleQuote | AnyCharButSingleQuote
DoubleQuotedTextChar ::= EscapedDoubleQuote | AnyCharButDoubleQuote
EscapedSingleQuote ::= "''"
EscapedDoubleQuote ::= "\"\""

SuperscriptPower ::= "²" | "³"
LowerLetter ::= "[a-z]"
UpperLetter ::= "[A-Z]"
NameLetter ::= LowerLetter | UpperLetter
Digit ::= "[0-9]"
NonZeroDigit ::= "[1-9]"
AnyCharButSingleQuote ::= "[^']"
AnyCharButDoubleQuote ::= "[^\"]"
