BeamableServices/services/StepH-GameEventScript/Compiler/GesParser.cs
using System;
using System.Collections.Generic;
using System.Globalization;
using System.Linq;
using System.Security.Cryptography;
using System.Text;
using StepH.GameEventScript.Api;
using static StepH.GameEventScript.Compiler.GesTokenKind;

namespace StepH.GameEventScript.Compiler;

internal sealed class GesParser
{
    private const decimal SquareRootExponent = 0.5m;
    private const decimal CubeRootExponent = 0.3333333333333333333333333333m;

    public static ParsedScript Parse(string script, string? sourceName = null, GameEventScriptCompileOptions? options = null)
    {
        _ = script ?? throw new ArgumentNullException(nameof(script));
        options ??= new GameEventScriptCompileOptions();

        var normalizedScript = script.Replace("\r\n", "\n").Replace('\r', '\n');
        var hash = ComputeShortHash(normalizedScript);
        var rawTokens = new GesLexer(normalizedScript, options).Tokenize().ToList();
        var moduleName = TryResolveModuleName(rawTokens) ?? $"AnonymousModule_{hash}";
        var resolvedSourceName = string.IsNullOrWhiteSpace(sourceName) ? $"UnknownSource_{hash}" : sourceName;
        var tokens = new List<GesToken>();
        var initialErrors = new List<GameEventScriptCompileError>();
        foreach (var token in rawTokens)
        {
            if (token.Kind == Illegal)
            {
                initialErrors.Add(new GameEventScriptCompileError(
                    $"Illegal token '{token.Text}'",
                    moduleName,
                    token.Text,
                    GameEventScriptSymbolKind.Unknown,
                    GameEventScriptCompileErrorKind.Syntax,
                    new GameEventScriptSourceLocation(resolvedSourceName, token.Line, token.Column, token.EndLine, token.EndColumn, moduleName)));
                continue;
            }

            tokens.Add(token);
        }

        return new GesParser(tokens, moduleName, resolvedSourceName, initialErrors).ParseScript();
    }

    private static readonly HashSet<string> CollectionCombineOperators = new(StringComparer.Ordinal)
    {
        "intersect",
        "combine",
        "merge",
        "except",
        "zip"
    };

    private sealed class GameEventScriptParseException(string message, int line, int column) : Exception($"{message} (line {line}, col {column})")
    {
        public int Line { get; } = line;
        public int Column { get; } = column;
        public int EndLine { get; } = line;
        public int EndColumn { get; } = column;

        public GameEventScriptParseException(string message, GesToken token) : this(message, token.Line, token.Column, token.EndLine, token.EndColumn)
        {
        }

        private GameEventScriptParseException(string message, int line, int column, int endLine, int endColumn) : this(message, line, column)
        {
            EndLine = endLine;
            EndColumn = endColumn;
        }
    }

    private readonly IReadOnlyList<GesToken> _tokens;
    private readonly string _moduleName;
    private readonly string _sourceName;
    private readonly List<GameEventScriptCompileError> _errors;
    private int _index;

    private GesParser(IReadOnlyList<GesToken> tokens, string moduleName, string sourceName, IReadOnlyList<GameEventScriptCompileError> initialErrors)
    {
        _tokens = tokens;
        _moduleName = moduleName;
        _sourceName = sourceName;
        _errors = initialErrors.ToList();
    }

    private GameEventScriptSourceLocation CreateRange(GesToken token)
        => new(_sourceName, token.Line, token.Column, token.EndLine, token.EndColumn, _moduleName);

    private GameEventScriptSourceLocation CreateRange(GesToken start, GesToken end)
        => new(_sourceName, start.Line, start.Column, end.EndLine, end.EndColumn, _moduleName);

    private GameEventScriptSourceLocation? MergeRanges(ScriptNode? first, ScriptNode? last = null)
    {
        var start = first?.SourceRange;
        var end = (last ?? first)?.SourceRange;
        if (start is null || end is null || start.Line is null || start.Column is null)
        {
            return null;
        }

        var endLine = end.EndLine ?? end.Line;
        var endColumn = end.EndColumn ?? end.Column;
        return endLine is null || endColumn is null
            ? null
            : new GameEventScriptSourceLocation(_sourceName, start.Line, start.Column, endLine, endColumn, _moduleName);
    }

    private T WithRange<T>(T node, GesToken startToken) where T : ScriptNode
        => node with { SourceRange = CreateRange(startToken, Previous) };

    private T WithRange<T>(T node, GesToken startToken, GesToken endToken) where T : ScriptNode
        => node with { SourceRange = CreateRange(startToken, endToken) };

    private T WithRange<T>(T node, ScriptNode? first, ScriptNode? last = null) where T : ScriptNode
        => node with { SourceRange = MergeRanges(first, last) };

    private ParsedScript ParseScript()
    {
        var typeDefinitions = new List<TypeDefinitionNode>();
        var ruleDefinitions = new List<RuleDefinitionNode>();
        var selectDefinitions = new List<SelectDefinitionNode>();
        var handlers = new List<EventHandlerNode>();
        SkipStatementSeparators();
        ParseOptionalModuleDeclaration();
        SkipStatementSeparators();
        while (!Is(EndOfFile))
        {
            try
            {
                if (Match(Record))
                {
                    typeDefinitions.Add(ParseTypeDefinition());
                }
                else if (Match(Rule))
                {
                    ruleDefinitions.Add(ParseRuleDefinition());
                }
                else if (Match(Select))
                {
                    selectDefinitions.Add(ParseSelectDefinition());
                }
                else
                {
                    handlers.Add(ParseEventHandler());
                }

                RequireHandlerSeparatorOrEndOfFile();
                SkipStatementSeparators();
            }
            catch (GameEventScriptParseException ex)
            {
                AddParseError(ex);
                SynchronizeTopLevel();
            }
        }

        if (_errors.Count > 0)
        {
            throw new GameEventScriptCompileException(_errors);
        }

        var module = new ParsedScript(_moduleName, _sourceName, typeDefinitions, ruleDefinitions, selectDefinitions, handlers);
        var firstToken = _tokens.FirstOrDefault();
        if (firstToken.Kind == EndOfFile)
        {
            return module with { SourceRange = CreateRange(firstToken) };
        }

        var lastToken = _tokens.LastOrDefault(token => token.Kind != EndOfFile);
        return module with { SourceRange = CreateRange(firstToken, lastToken) };
    }

    private static string ComputeShortHash(string text)
    {
        using var sha256 = SHA256.Create();
        var bytes = sha256.ComputeHash(Encoding.UTF8.GetBytes(text));
        return BitConverter.ToString(bytes, 0, 4).Replace("-", string.Empty, StringComparison.Ordinal);
    }

    private static string? TryResolveModuleName(IReadOnlyList<GesToken> tokens)
    {
        var index = 0;
        while (index < tokens.Count && tokens[index].Kind == NewLine)
        {
            index++;
        }

        if (index >= tokens.Count || tokens[index].Kind != Module)
        {
            return null;
        }

        index++;
        while (index < tokens.Count && tokens[index].Kind == NewLine)
        {
            index++;
        }

        if (index >= tokens.Count)
        {
            return null;
        }

        return tokens[index].Kind switch
        {
            Identifier or Message => tokens[index].Text,
            _ => null
        };
    }

    private void ParseOptionalModuleDeclaration()
    {
        if (!Match(Module))
        {
            return;
        }

        SkipNewLines();
        if (Current.Kind is not (Identifier or Message))
        {
            throw new GameEventScriptParseException($"Expected module name but found {Current.Kind}", Current.Line, Current.Column);
        }

        Advance();
    }

    private TypeDefinitionNode ParseTypeDefinition()
    {
        var startToken = Previous;
        var name = ParseTypeName();
        Expect(As);
        SkipNewLines();
        Expect(LeftBrace);
        SkipStatementSeparators();

        var fields = new List<TypeFieldDefinitionNode>();
        while (!Is(RightBrace))
        {
            fields.Add(ParseTypeFieldDefinition());
            if (Match(Comma))
            {
                SkipStatementSeparators();
                continue;
            }

            SkipStatementSeparators();
        }

        Expect(RightBrace);
        return WithRange(new TypeDefinitionNode(name, fields), startToken);
    }

    private TypeFieldDefinitionNode ParseTypeFieldDefinition()
    {
        var startToken = Current;
        var name = ExpectIdentifier();
        Expect(Colon);
        SkipNewLines();
        var typeName = ParseTypeName();
        SkipNewLines();

        ExpressionNode? minimumExpression = null;
        ExpressionNode? maximumExpression = null;
        ExpressionNode? computedExpression = null;

        if (MatchWord("clamped"))
        {
            ExpectWord("between");
            minimumExpression = ParseEqualityExpression();
            Expect(And);
            maximumExpression = ParseEqualityExpression();
            SkipNewLines();
        }

        if (MatchWord("computed"))
        {
            ExpectWord("by");
            computedExpression = ParseExpression();
        }

        return WithRange(new TypeFieldDefinitionNode(name, typeName, minimumExpression, maximumExpression, computedExpression), startToken);
    }

    private RuleDefinitionNode ParseRuleDefinition()
    {
        var startToken = Previous;
        var name = ExpectIdentifier();
        var parameters = ParseDefinitionParameters();
        Expect(Means);
        SkipNewLines();
        var expression = ParseExpression();
        return WithRange(new RuleDefinitionNode(name, parameters, expression), startToken);
    }

    private SelectDefinitionNode ParseSelectDefinition()
    {
        var startToken = Previous;
        var name = ExpectIdentifier();
        var parameters = ParseDefinitionParameters();
        Expect(Means);
        SkipNewLines();
        var expression = ParseExpression();
        return WithRange(new SelectDefinitionNode(name, parameters, expression), startToken);
    }

    private IReadOnlyList<ParameterNode> ParseDefinitionParameters()
    {
        var parameters = new List<ParameterNode>();
        Expect(LeftParen);
        if (!Is(RightParen))
        {
            parameters.Add(ParseParameter());
            while (Match(Comma))
            {
                parameters.Add(ParseParameter());
            }
        }

        Expect(RightParen);
        return parameters;
    }

    private ParameterNode ParseParameter(bool allowDeclaredType = true)
    {
        var startToken = Current;
        if (Match(Underscore))
        {
            SkipNewLines();
            var localName = ExpectIdentifier();
            var declaredType = allowDeclaredType ? ParseOptionalParameterDeclaredType() : null;
            return WithRange(new ParameterNode(null, localName, declaredType), startToken);
        }

        var name = ExpectIdentifier();
        var typeName = allowDeclaredType ? ParseOptionalParameterDeclaredType() : null;
        return WithRange(new ParameterNode(name, name, typeName), startToken);
    }

    private string? ParseOptionalParameterDeclaredType()
    {
        SkipNewLines();
        if (!Match(As))
        {
            return null;
        }

        SkipNewLines();
        return ParseTypeName();
    }

    private EventHandlerNode ParseEventHandler()
    {
        var startToken = Current;
        Expect(On);
        SkipNewLines();
        var message = Expect(Message).Text;

        var parameters = new List<ParameterNode>();
        if (Match(LeftParen))
        {
            if (!Is(RightParen))
            {
                parameters.Add(ParseParameter());
                while (Match(Comma))
                {
                    parameters.Add(ParseParameter());
                }
            }

            Expect(RightParen);
        }

        var requiredTags = new List<string>();
        var excludedTags = new List<string>();
        ParseOptionalHandlerTagFilters(requiredTags, excludedTags);

        SkipNewLines();
        Expect(LeftBrace);
        var statements = ParseStatementsUntil(RightBrace);
        Expect(RightBrace);

        return WithRange(new EventHandlerNode(message, parameters, statements, requiredTags, excludedTags), startToken);
    }

    private void ParseOptionalHandlerTagFilters(List<string> requiredTags, List<string> excludedTags)
    {
        while (true)
        {
            SkipNewLines();
            if (Match(Matching))
            {
                ParseHandlerTagList(requiredTags);
                continue;
            }

            if (Match(Without))
            {
                ParseHandlerTagList(excludedTags);
                continue;
            }

            return;
        }
    }

    private void ParseHandlerTagList(List<string> tags)
    {
        do
        {
            SkipNewLines();
            var tag = Expect(Tag).Text[1..];
            var normalized = GameEventScriptMessage.NormalizeTagName(tag);
            if (normalized.Length > 0 && !tags.Contains(normalized, StringComparer.Ordinal))
            {
                tags.Add(normalized);
            }

            SkipNewLines();
        }
        while (Match(Comma));
    }

    private IReadOnlyList<StatementNode> ParseStatementsUntil(GesTokenKind closingKind)
    {
        var statements = new List<StatementNode>();
        SkipStatementSeparators();

        while (!Is(closingKind))
        {
            if (Is(EndOfFile))
            {
                var token = Current;
                AddParseError(new GameEventScriptParseException($"Expected '{closingKind}' before end of input", token.Line, token.Column));
                return statements;
            }

            try
            {
                statements.Add(ParseStatement());
                RequireStatementSeparatorOrClosing(closingKind);
            }
            catch (GameEventScriptParseException ex)
            {
                AddParseError(ex);
                if (!SynchronizeStatement(closingKind))
                {
                    return statements;
                }
            }
        }

        return statements;
    }

    private StatementNode ParseStatement()
    {
        if (IsSeededRandomStatementStart())
        {
            return ParseSeededRandomStatement();
        }

        if (Match(Emit))
        {
            return ParsePublishStatement(PublishStatementKind.Emit);
        }

        if (Match(Publish))
        {
            return ParsePublishStatement(PublishStatementKind.Publish);
        }

        if (Match(Let))
        {
            return ParseLetStatement();
        }

        if (Match(If))
        {
            return ParseIfStatement();
        }

        if (Match(For))
        {
            return ParseForStatement();
        }

        var expression = ParseExpression();
        return WithRange(new ExpressionStatementNode(expression), expression);
    }

    private PublishStatementNode ParsePublishStatement(PublishStatementKind kind)
    {
        var startToken = Previous;
        SkipNewLines();
        var messageExpression = ParsePublishMessageExpression();
        var tagExpressions = ParseOptionalTagExpressions();
        return WithRange(new PublishStatementNode(kind, messageExpression, tagExpressions), startToken);
    }

    private ExpressionNode ParsePublishMessageExpression()
    {
        if (Current.Kind == Message)
        {
            return ParseMessageLiteralExpressionCore();
        }

        return ParseExpression();
    }

    private IReadOnlyList<ExpressionNode> ParseOptionalTagExpressions()
    {
        if (!Match(With))
        {
            return [];
        }

        var tags = new List<ExpressionNode>();
        do
        {
            SkipNewLines();
            tags.Add(ParseExpression());
        }
        while (Match(Comma));

        return tags;
    }

    private ArgumentNode ParseArgument()
    {
        var startToken = Current;
        if (IsArgumentLabelStart())
        {
            var label = ExpectArgumentLabel();
            SkipNewLines();
            if (Match(Colon))
            {
                SkipNewLines();
                var expression = ParseExpression();
                return WithRange(new ArgumentNode(label, expression), startToken);
            }
        }

        var value = ParseExpression();
        return WithRange(new ArgumentNode(null, value), startToken);
    }

    private ArgumentListNode ParseArgumentListAfterLeftParen()
    {
        SkipNewLines();
        if (Match(RightParen))
        {
            return ArgumentListNode.Empty;
        }

        var arguments = ParseArgumentListAfterFirstArgument(ParseArgument(), RightParen);
        Expect(RightParen);
        return arguments;
    }

    private ArgumentListNode ParseArgumentListAfterFirstArgument(ArgumentNode firstArgument, GesTokenKind closingKind)
    {
        var arguments = new List<ArgumentNode> { firstArgument };
        while (true)
        {
            SkipNewLines();
            if (Match(Comma))
            {
                SkipNewLines();
                arguments.Add(ParseArgument());
                continue;
            }

            if (!Is(closingKind) && IsArgumentLabelStart())
            {
                arguments.Add(ParseArgument());
                continue;
            }

            return new ArgumentListNode(arguments);
        }
    }

    private ArgumentListNode ParseUngroupedLabeledArgumentList()
    {
        if (!IsArgumentLabelStart())
        {
            return ArgumentListNode.Empty;
        }

        var arguments = new List<ArgumentNode>();
        do
        {
            arguments.Add(ParseArgument());
        }
        while (IsArgumentLabelStart());

        return new ArgumentListNode(arguments);
    }

    private ArgumentListNode ParseOfArgumentList()
    {
        var arguments = new List<ArgumentNode>();
        ExpectWord("of");
        SkipNewLines();
        arguments.Add(new ArgumentNode(null, ParseEqualityExpression()));
        while (Match(And))
        {
            SkipNewLines();
            arguments.Add(new ArgumentNode(null, ParseEqualityExpression()));
        }

        return new ArgumentListNode(arguments);
    }

    private LetStatementNode ParseLetStatement()
    {
        var startToken = Previous;
        var identifier = ExpectIdentifier();
        string? declaredType = null;
        if (Match(As))
        {
            SkipNewLines();
            declaredType = ParseTypeName();
        }

        if (Match(Be))
        {
            var expression = ParseExpression();
            return WithRange(new LetStatementNode(identifier, declaredType, expression), startToken);
        }
        var token = Current;
        throw new GameEventScriptParseException($"Expected {Be} but found {token.Kind}", token.Line, token.Column);
    }

    private IfStatementNode ParseIfStatement()
    {
        var startToken = Previous;
        var condition = ParseExpression();
        var thenBody = ParseStatementBody();

        StatementBodyNode? elseBody = null;
        if (IsElseClauseStart())
        {
            SkipNewLines();
            Expect(Else);
            elseBody = ParseStatementBody();
        }

        return WithRange(new IfStatementNode(condition, thenBody, elseBody), startToken);
    }

    private ForStatementNode ParseForStatement()
    {
        var startToken = Previous;
        var identifier = ExpectIdentifier();
        SkipNewLines();
        IterationSourceNode source;
        if (Match(In))
        {
            SkipNewLines();
            if (Current.Kind == Identifier && string.Equals(Current.Text, "from", StringComparison.Ordinal))
            {
                throw new GameEventScriptParseException("Direct ranges are not allowed after 'in'; use 'for item from ... to ...' or iterate a range variable", Current.Line, Current.Column);
            }

            var sourceStart = Current;
            source = WithRange(new CollectionIterationSourceNode(ParseExpression()), sourceStart);
        }
        else if (MatchWord("from"))
        {
            var fromToken = Previous;
            source = WithRange(new RangeIterationSourceNode(ParseRangeExpressionCore()), fromToken);
        }
        else
        {
            var token = Current;
            throw new GameEventScriptParseException($"Expected {In} or 'from' but found {token.Text}", token.Line, token.Column);
        }

        var body = ParseStatementBody();
        return WithRange(new ForStatementNode(identifier, source, body), startToken);
    }

    private SeededRandomStatementNode ParseSeededRandomStatement()
    {
        var startToken = Current;
        Expect(Tag);
        SkipNewLines();
        Expect(With);
        SkipNewLines();
        var seedExpression = ParseExpression();
        var body = ParseStatementBody();
        return WithRange(new SeededRandomStatementNode(seedExpression, body), startToken);
    }

    private StatementBodyNode ParseStatementBody()
    {
        var startToken = Current;
        SkipNewLines();
        if (Match(LeftBrace))
        {
            var statements = ParseStatementsUntil(RightBrace);
            Expect(RightBrace);
            return WithRange(new StatementBodyNode(true, statements), startToken);
        }

        return WithRange(new StatementBodyNode(false, [ParseStatement()]), startToken);
    }

    private ExpressionNode ParseExpression() => ParseGuardedChoiceExpression();

    private ExpressionNode ParseGuardedChoiceExpression()
    {
        var expression = ParseDefaultExpression();
        if (Match(When))
        {
            var branches = new List<GuardedChoiceBranchNode>();
            var conditionExpression = ParseDefaultExpression();
            branches.Add(new GuardedChoiceBranchNode(expression, conditionExpression));

            while (Match(Comma))
            {
                SkipNewLines();
                if (Is(Otherwise))
                {
                    break;
                }

                Match(Or);
                SkipNewLines();

                var branchValue = ParseDefaultExpression();
                SkipNewLines();
                Expect(When);
                SkipNewLines();
                var branchCondition = ParseDefaultExpression();
                branches.Add(new GuardedChoiceBranchNode(branchValue, branchCondition));
            }

            SkipNewLines();
            Expect(Otherwise);
            SkipNewLines();
            var otherwiseExpression = ParseDefaultExpression();
            expression = WithRange(new GuardedChoiceExpressionNode(branches, otherwiseExpression), expression, otherwiseExpression);
        }

        return expression;
    }

    private ExpressionNode ParseDefaultExpression()
    {
        var expression = ParseCollectionCombineExpression();

        while (Current.Kind == Tag && string.Equals(Current.Text, ":default", StringComparison.Ordinal))
        {
            Advance();
            var op = "default";
            SkipNewLines();
            var right = ParseCollectionCombineExpression();
            expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
        }

        return expression;
    }
